--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,3 +1,6 @@
+<div class="background-grid"></div>
+<div class="background-grid-shadow"></div>
+
 <header class="header">
   <div class="logo">
     {{#link 'help_center'}}
